--- a/MeuCurriculo/src/app/app.component.html
+++ b/MeuCurriculo/src/app/app.component.html
@@ -1,11 +1,1 @@
-<!--<app-home></app-home>-->
-<!--<app-dicas></app-dicas>-->
-<!--<app-escolhermodelo></app-escolhermodelo>-->
-<app-form></app-form>
-<!--<app-moderno></app-moderno>
-<app-tech></app-tech>
-<app-minimalista></app-minimalista>
-<app-executivo></app-executivo>
-<app-criativo></app-criativo>
-<app-classico></app-classico>-->
-<!--<app-resultado></app-resultado>-->
+<router-outlet></router-outlet>
