--- a/MeuCurriculo/src/app/home/home.component.html
+++ b/MeuCurriculo/src/app/home/home.component.html
@@ -1,63 +1,59 @@
-                                                                          <!--CABEÇALHO-->
+<!--CABEÇALHO-->
 <header class="cabecalho">
    <div class="container">
-    <div class="conteudo-cabecalho">
-     <div class="logo-area">
-      <div class="icone-logo">
-       <svg width="30" height="30" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14 2H6C5.46957 2 4.96086 2.21071 4.58579 2.58579C4.21071 2.96086 4 3.46957 4 4V20C4 20.5304 4.21071 21.0391 4.58579 21.4142C4.96086 21.7893 5.46957 22 6 22H18C18.5304 22 19.0391 21.7893 19.4142 21.4142C19.7893 21.0391 20 20.5304 20 20V8L14 2Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" /> <path d="M14 2V8H20" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" /> <path d="M16 13H8" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" /> <path d="M16 17H8" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" /> <path d="M10 9H9H8" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-       </svg>
+      <div class="conteudo-cabecalho">
+         <div class="logo-area">
+            <div class="icone-logo">
+               <svg width="30" height="30" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                     d="M14 2H6C5.46957 2 4.96086 2.21071 4.58579 2.58579C4.21071 2.96086 4 3.46957 4 4V20C4 20.5304 4.21071 21.0391 4.58579 21.4142C4.96086 21.7893 5.46957 22 6 22H18C18.5304 22 19.0391 21.7893 19.4142 21.4142C19.7893 21.0391 20 20.5304 20 20V8L14 2Z"
+                     stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                  <path d="M14 2V8H20" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                  <path d="M16 13H8" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                  <path d="M16 17H8" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                  <path d="M10 9H9H8" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+               </svg>
+            </div>
+            <div>
+               <h1 class="nome-site" id="nome-site">MeuCurriculo.com</h1>
+               <p class="slogan" id="slogan">Seu futuro começa aqui</p>
+            </div>
+         </div>
       </div>
-      <div>
-       <h1 class="nome-site" id="nome-site">MeuCurriculo.com</h1>
-       <p class="slogan" id="slogan">Seu futuro começa aqui</p>
-      </div>
-     </div>
-    </div>
    </div>
-  </header>
+</header>
 
 
-                                                                      <!--TEXTO PRINCIPAL-->
-  <main>
+<!--TEXTO PRINCIPAL-->
+<main>
    <section class="secao-principal">
-    <div class="container">
-     <h2 class="titulo-principal" id="titulo-principal">Crie seu currículo profissional em minutos</h2>
-     <p class="subtitulo" id="subtitulo">Destaque-se no mercado com um currículo impecável</p><button class="botao-comecar" id="botao-comecar">Começar a Criar</button>
-    </div>
+      <div class="container">
+         <h2 class="titulo-principal" id="titulo-principal">Crie seu currículo profissional em minutos</h2>
+         <p class="subtitulo" id="subtitulo">Destaque-se no mercado com um currículo impecável</p>
+         <button (click)="navegar()" class="botao-comecar" id="botao-comecar">Começar a Criar</button>
+      </div>
    </section>
 
 
-                                                                        <!--CARDS-PASSOS-->   
+   <!--CARDS-PASSOS-->
    <section class="secao-passos">
-    <div class="container">
-     <h2 class="titulo-secao">Como Funciona</h2>
-     <div class="container-passos">
-      <article class="card-passo">
-       <div class="numero-passo">
-        1
-       </div>
+      <div class="container">
+         <h2 class="titulo-secao">Como Funciona</h2>
 
+         <div class="container-passos">
 
-       <h3 class="titulo-passo" id="passo1-titulo">Escolha o Modelo</h3>
-       <p class="descricao-passo" id="passo1-descricao">Modelos profissionais e modernos</p>
-      </article>
-      <article class="card-passo">
-       <div class="numero-passo">
-        2
-       </div>
+            <!-- @for (let item of inforCard; track $index) {
+            <app-card-passos numero="item.numero" titulo="item.titulo" descricao="item.descricao">
+            </app-card-passos>
+            } -->
 
-       <h3 class="titulo-passo" id="passo2-titulo">Preencha seus Dados</h3>
-       <p class="descricao-passo" id="passo2-descricao">Interface intuitiva e rápida</p>
-      </article>
-      <article class="card-passo">
-       <div class="numero-passo">
-        3
-       </div>
-
-       <h3 class="titulo-passo" id="passo3-titulo">Download em PDF</h3>
-       <p class="descricao-passo" id="passo3-descricao">Pronto para enviar às empresas</p>
-      </article>
-     </div>
-    </div>
+            <app-card-passos numero="1" titulo="Escolha o Modelo"
+               descricao="Modelos profissionais e modernos"></app-card-passos>
+            <app-card-passos numero="2" titulo="Preencha seus Dados"
+               descricao="Interface intuitiva e rápida"></app-card-passos>
+            <app-card-passos numero="3" titulo="Download em PDF"
+               descricao="Pronto para enviar às empresas"></app-card-passos>
+         </div>
+      </div>
    </section>
-  </main>
+</main>
